src/pages/styles.scss
@import '@okp4/ui/lib/scss/themes.scss';

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;

  > div:first-of-type,
  > div:first-of-type > div:first-of-type {
    height: 100%;
  }
}

.okp4-dataset-deposit-main {
  @include with-theme {
    height: 100%;
    overflow: auto;
    background: themed('header-background');

    .okp4-dataset-deposit-content {
      background-repeat: no-repeat;
      min-height: 100%;
      display: grid;
      grid-template-rows: auto;
      gap: 10px;

      .okp4-dataset-stepper-container {
        max-width: 1000px;
        margin: 0 auto;
        padding: 0 60px;
        align-self: flex-start;
        overflow: auto;

        .okp4-dataset-stepper-main {
          display: flex;
          flex-direction: column;
          width: 100%;
          min-width: 280px;
          min-height: 650px;
          max-height: 1100px;
          margin-bottom: 50px;

          @media screen and (max-height: 920px) {
            min-height: 520px;
            max-height: 920px;
            max-width: 850px;
          }

          > h1 {
            margin-bottom: 10px;
          }

          .okp4-dataset-stepper-description {
            margin-bottom: 25px;

            @media screen and (max-height: 920px) {
              margin-bottom: 10px;
            }
          }

          .okp4-stepper-container {
            width: 100%;
            @media screen and (max-height: 920px) {
              height: 520px;
            }
          }

          .okp4-dataspace-step-main {
            width: 100%;
            display: flex;
            flex-direction: column;

            .okp4-dataspace-step-description {
              white-space: pre-line;
            }

            .okp4-dataspace-select-container {
              align-self: center;
              width: 70%;
              margin-top: 40px;

              @media screen and (max-width: 390px) {
                width: 90%;
                margin-top: 20px;
              }
            }
          }

          .okp4-file-selection-step-main {
            margin: auto;
            display: grid;
            gap: 20px;

            .okp4-file-selection-step-file-picker {
              margin-left: auto;
              margin-right: auto;
            }
          }

          .okp4-metadata-step-main {
            display: grid;
            gap: 20px;
            .okp4-metadata-step-container {
              width: 70%;
              display: grid;
              gap: 5px;
              padding: 5px;
              margin: auto;
              @media screen and (max-width: 480px) {
                width: 100%;
              }
            }
          }

          .okp4-dataset-upload-step-main {
            width: 70%;
            margin: auto;
            display: grid;
            gap: 25px;

            .okp4-dataset-upload-step-summary-field {
              display: grid;
              @media screen and (min-width: 770px) {
                grid-template-columns: repeat(2, 1fr);
                gap: 5px;
              }
            }
          }

          .okp4-success-error-container {
            display: flex;
            height: 100%;
            width: 100%;

            .okp4-success-error-content {
              text-align: center;
              margin: auto;
            }
          }
        }
      }

      .okp4-brand-link {
        text-decoration: unset;
        color: inherit;
      }
    }
  }
}

